# ProcessImage

./: .gitatribute  CMakeLists.txt
ImageProcessingCustomLibrary/: CMakeLists.txt
ImageProcessingCustomLibrary/inc/: Image.h  Matrix.h  ProcessImg.h
ImageProcessingCustomLibrary/src/: Image.cpp  ProcessImg.cpp
Week1/: CMakeLists.txt
Week1/imgs/: carnavalWheel.jfif
Week1/inc/: Image.h  Matrix.h  ProcessImg.h
Week1/src/: Image.cpp  ProcessImg.cpp  main.cpp
Week2/: CMakeLists.txt
Week2/src/: main.cpp
